Naming updated to make more sense.

--- a/x360ce.App.Beta/MainForm.resx
+++ b/x360ce.App.Beta/MainForm.resx
@@ -124,78 +124,78 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACO
-        EAAAAk1TRnQBSQFMAgEBBQEAAUgBAQFIAQEBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABIAMAAQEBAAEgBgABIP8A/wD/ACIAATkBTAH/AQABRAGCAf8BAAFLAYkB/wEAAUkBiAH/AQABSQGI
-        Af8BAAFJAYgB/wEAAUkBiAH/AQABSwGJAf8BAAFEAYIB/wEAAToBTQH/2QABPwFUAf8BUgHnAv8BhgHv
-        Av8BhQHuAv8BhQHuAv8BhQHuAv8BhQHuAv8BhgHvAv8BUQHoAv8BAAE/AVQB/9kAAT4BUwH/AUUB5wH+
-        Af8BTgHqAfwB/wFNAekB+wH/AU0B6QH7Af8BTQHpAfsB/wFNAekB+wH/AU4B6gH8Af8BRQHnAf4B/wEA
-        AT4BUwH/2QABNwFKAf8BNQHOAeYB/wE5AdAB4gH/ATgBzwHiAf8BOAHPAeIB/wE4Ac8B4gH/ATgBzwHi
-        Af8BOQHQAeIB/wE0Ac8B5gH/AQABNwFKAf/ZAAEvAUMB/wEiAbgB0QH/ASMBuAHOAf8BIwG3Ac0B/wEj
-        AbcBzQH/ASMBtwHNAf8BIwG3Ac0B/wEjAbgBzgH/ASIBuAHRAf8BAAEvAUMB/9kAASkBOwH/ARIBogG6
-        Af8BDwGeAbYB/wELAZ0BtAH/AQsBnQG0Af8BCwGdAbQB/wELAZ0BtAH/AQ8BngG2Af8BEgGiAboB/wEA
-        ASkBOwH/2QABIAEyAf8BKgGiAbYB/wEyAaQBtgH/ATEBogG1Af8BLwGiAbUB/wEvAaIBtQH/ATEBogG1
-        Af8BMgGkAbYB/wEqAaIBtgH/AQABIgE0Af/ZAAEYASoB/wFGAagBuAH/AYIBsgG/Af8BgAGwAb4B/wGA
-        AbABvgH/AYABsAG+Af8BgAGwAb4B/wGCAbIBvwH/AUYBqAG4Af8BAAEZASsB/9kAAREBIQH/AUYBogGw
-        Af8BkAG2AcEB/wGOAbQBvwH/AY4BtAG/Af8BjgG0Ab8B/wGOAbQBvwH/AZABtgHBAf8BRgGiAbAB/wEA
-        ARABIAH/2QABDAEbAf8BAAENARwB/wEAAQ0BHAH/AQABDQEcAf8BAAENARwB/wEAAQ0BHAH/AQABDQEc
-        Af8BAAENARwB/wEAAQ0BHAH/AQABDQEcAf//AP8A/wD/AP8A/wDeAAE8AR0BAAH/AUsBJQEAAf8BUQEq
-        AQAB/wFRASkBAAH/AVEBKQEAAf8BUQEpAQAB/wFRASkBAAH/AVEBKgEAAf8BSwElAQAB/wE9AR0BAAH/
-        GQABOgEGAf8BAAFJAQ0B/wEAAU4BDwH/AQABTgEPAf8BAAFOAQ8B/wEAAU4BDwH/AQABTgEPAf8BAAFO
-        AQ8B/wEAAUkBDQH/AQABOwEGAf8YAAEuASgBHwH/ATcBMAEnAf8BPQE2ASwB/wE9ATYBLAH/AT0BNgEs
-        Af8BPQE2ASwB/wE9ATYBLAH/AT0BNgEsAf8BNwEwAScB/wEuASgBHwH/GgABTAH/AgABggH/AgABiQH/
-        AgABiAH/AgABiAH/AgABiAH/AgABiAH/AgABiQH/AgABggH/AgABTQH/GAABRAEhAQAC/wHCAToC/wHK
-        AUsB/wH+AckBSgH/Af4ByQFKAf8B/gHJAUoB/wH+AckBSgL/AcoBSwL/AcEBOgH/AUUBIQEAAf8ZAAFC
-        AQkB/wE9Af8BmgH/AUoB/wGrAf8BSAH/AaoB/wFIAf8BqgH/AUgB/wGqAf8BSAH/AaoB/wFKAf8BqwH/
-        AT0B/wGaAf8BAAFCAQsB/xgAATMBLQEkAf8B2wHPAbYB/wHhAdYBuwH/AeAB1QG6Af8B4AHVAboB/wHg
-        AdUBugH/AeAB1QG6Af8B4QHWAbsB/wHbAc4BtgH/ATMBLAEjAf8aAAFUAf8BUgGAAv8BhgGRAv8BhQGP
-        Av8BhQGPAv8BhQGPAv8BhQGPAv8BhgGRAv8BUQGAAv8CAAFUAf8YAAFDASABAAH/Ae8BsQE1Af8B7QG4
-        AUMB/wHsAbcBQgH/AewBtwFCAf8B7AG3AUIB/wHsAbcBQgH/Ae0BuAFDAf8B7wGxATUB/wFDAR8BAAH/
-        GQABQAEIAf8BNQHpAZEB/wFAAeYBnAH/AT8B5QGbAf8BPwHlAZsB/wE/AeUBmwH/AT8B5QGbAf8BQAHm
-        AZwB/wE1AekBkQH/AQABQAEIAf8YAAEyASwBIwH/AckBvQGoAf8BzQHCAasB/wHMAcABqgH/AcwBwAGq
-        Af8BzAHAAaoB/wHMAcABqgH/Ac0BwgGrAf8ByQG9AagB/wEyASwBIwH/GgABUwH/AUUBTgH+Af8BTgGC
-        AfwB/wFNAYEB+wH/AU0BgQH7Af8BTQGBAfsB/wFNAYEB+wH/AU4BggH8Af8BRQFOAf4B/wIAAVMB/xgA
-        AToBGQEAAf8B1AGdASkB/wHRAaABMQH/AdEBnwEvAf8B0QGfAS8B/wHRAZ8BLwH/AdEBnwEvAf8B0QGg
-        ATEB/wHUAZ0BKQH/AToBGQEAAf8ZAAE3AQIB/wEoAdEBVQH/AS4BzwGEAf8BLQHOAYMB/wEtAc4BgwH/
-        AS0BzgGDAf8BLQHOAYMB/wEuAc8BhAH/ASgB0QFVAf8BAAE3AQIB/xgAASwBJgEdAf8BtQGsAZcB/wG1
-        Aa0BmQH/AbUBrAGYAf8BtQGsAZgB/wG1AawBmAH/AbUBrAGYAf8BtQGtAZkB/wG1AawBlwH/ASwBJQEd
-        Af8aAAFKAf8BNQE7AeYB/wE5AUMB4gH/ATgBQQHiAf8BOAFBAeIB/wE4AUEB4gH/ATgBQQHiAf8BOQFD
-        AeIB/wE0ATsB5gH/AgABSgH/GAABMQESAQAB/wG7AYcBGAH/AboBhwEbAf8BuQGHARsB/wG5AYcBGwH/
-        AbkBhwEbAf8BuQGHARsB/wG6AYcBGwH/AbsBhwEYAf8BMQESAQAB/xkAAS8BAAH/ARgBtwFCAf8BGwG0
-        AUQB/wEbAbQBRAH/ARsBtAFEAf8BGwG0AUQB/wEbAbQBRAH/ARsBtAFEAf8BGAG3AUIB/wEAAS8BAAH/
-        GAABJgEfARgB/wGhAZcBhgH/AaABlgGFAf8BoAGWAYUB/wGgAZYBhQH/AaABlgGFAf8BoAGWAYUB/wGg
-        AZYBhQH/AaEBlwGGAf8BJgEfARgB/xoAAUMB/wEiASYB0QH/ASMBKQHOAf8BIwEpAc0B/wEjASkBzQH/
-        ASMBKQHNAf8BIwEpAc0B/wEjASkBzgH/ASIBJgHRAf8CAAFDAf8YAAEoAQwBAAH/AaIBTAEMAf8BnwFJ
-        AQoB/wGbAUYBBwH/AZsBRgEHAf8BmwFGAQcB/wGbAUYBBwH/AZ8BSQEKAf8BogFMAQwB/wEoAQwBAAH/
-        GQABJgEAAf8BDQGfATEB/wELAZsBLwH/AQgBmQEsAf8BCAGZASwB/wEIAZkBLAH/AQgBmQEsAf8BCwGb
-        AS8B/wENAZ8BMQH/AQABJgEAAf8YAAEfARkBEgH/AY0BhAFOAf8BigGBAUsB/wGHAVUBSAH/AYcBVQFI
-        Af8BhwFVAUgB/wGHAVUBSAH/AYoBgQFLAf8BjQGEAU4B/wEfARkBEgH/GgABOwH/ARIBFgG6Af8BDwET
-        AbYB/wELARABtAH/AQsBEAG0Af8BCwEQAbQB/wELARABtAH/AQ8BEwG2Af8BEgEWAboB/wIAATsB/xgA
-        AR8BBAEAAf8BnwFUASgB/wGhAYQBMQH/AaABggEvAf8BnwGBAS4B/wGfAYEBLgH/AaABggEvAf8BoQGE
-        ATEB/wGfAVQBKAH/AR8BBgEAAf8ZAAEdAQAB/wEqAZ0BQQH/ATMBnwFJAf8BMQGeAUcB/wEvAZ0BRgH/
-        AS8BnQFGAf8BMQGeAUcB/wEzAZ8BSQH/ASoBnQFBAf8BAAEdAQAB/xgAARgBEwENAf8BlAGOAYMB/wGX
-        AZEBiQH/AZYBkAGHAf8BlQGPAYYB/wGVAY8BhgH/AZYBkAGHAf8BlwGRAYkB/wGUAY4BgwH/ARgBEwEN
-        Af8aAAEyAf8BKgErAbYB/wEyATQBtgH/ATEBMgG1Af8BLwEwAbUB/wEvATABtQH/ATEBMgG1Af8BMgE0
-        AbYB/wEqASsBtgH/AgABNAH/GAABFQIAAf8BpQGOAUkB/wGuAZoBhAH/Aa0BmgGCAf8BrQGaAYIB/wGt
-        AZoBggH/Aa0BmgGCAf8BrgGaAYQB/wGlAY4BSQH/ARUCAAH/GQABEwEAAf8BSQGkAYEB/wGFAa0BkAH/
-        AYMBrAGPAf8BgwGsAY8B/wGDAawBjwH/AYMBrAGPAf8BhQGtAZAB/wFKAaQBgQH/AQABFAEAAf8YAAER
-        AQsBBgH/AaABmwGVAf8BqgGmAaIB/wGqAaYBoQH/AaoBpgGhAf8BqgGmAaEB/wGqAaYBoQH/AaoBpgGi
-        Af8BoAGbAZUB/wERAQsBBgH/GgABKgH/AkYBuAH/AoIBvwH/AoABvgH/AoABvgH/AoABvgH/AoABvgH/
-        AoIBvwH/AkYBuAH/AgABKwH/GAABCQIAAf8BnAGLAUwB/wGwAaUBlAH/Aa8BowGSAf8BrwGjAZIB/wGv
-        AaMBkgH/Aa8BowGSAf8BsAGlAZQB/wGcAYoBTAH/AQoCAAH/GQABCAEAAf8BTQGbAYAB/wGVAbEBnQH/
-        AZMBrwGbAf8BkwGvAZsB/wGTAa8BmwH/AZMBrwGbAf8BlQGxAZ0B/wFLAZsBgAH/AQABCQEAAf8YAAEH
-        AQMBAAH/AZsBlwGTAf8BsQGvAawB/wGvAa0BqgH/Aa8BrQGqAf8BrwGtAaoB/wGvAa0BqgH/AbEBrwGs
-        Af8BmwGXAZMB/wEIAQMBAAH/GgABIQH/AkYBsAH/ApABwQH/Ao4BvwH/Ao4BvwH/Ao4BvwH/Ao4BvwH/
-        ApABwQH/AkYBsAH/AgABIAH/GAABBQIAAf8BBAIAAf8BBAIAAf8BBAIAAf8BBAIAAf8BBAIAAf8BBAIA
-        Af8BBAIAAf8BBAIAAf8BBgIAAf8ZAAEFAQAB/wEAAQMBAAH/AQABAwEAAf8BAAEDAQAB/wEAAQMBAAH/
-        AQABAwEAAf8BAAEDAQAB/wEAAQMBAAH/AQABAwEAAf8BAAEGAQAB/xgAAQUBAQEAAf8BBAIAAf8BBAIA
-        Af8BBAIAAf8BBAIAAf8BBAIAAf8BBAIAAf8BBAIAAf8BBAIAAf8BBgECAQAB/xoAARsB/wIAARwB/wIA
-        ARwB/wIAARwB/wIAARwB/wIAARwB/wIAARwB/wIAARwB/wIAARwB/wIAARwB//8A/wD/AA8AAUIBTQE+
-        BwABPgMAASgDAAFAAwABIAMAAQEBAAEBBgABARYAA/8BAAL/BgAC/wYAAv8GAAHgAQcGAAHgAQcGAAHg
-        AQcGAAHgAQcGAAHgAQcGAAHgAQcGAAHgAQcGAAHgAQcGAAHgAQcGAAHgAQcGAAL/BgAC/wYAAv8GABj/
-        AeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEH
-        AeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEH
-        AeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBxj/Cw==
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACM
+        EAAAAk1TRnQBSQFMAgEBBQEAAVABAQFQAQEBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABIAMAAQEBAAEgBgABIP8A/wD/ACIAATgBSwH/AQABQwGCAf8BAAFKAYkB/wEAAUgBiAH/AQABSAGI
+        Af8BAAFIAYgB/wEAAUgBiAH/AQABSgGJAf8BAAFDAYIB/wEAATkBTAH/2QABPgFTAf8BUQHnAv8BhgHv
+        Av8BhQHuAv8BhQHuAv8BhQHuAv8BhQHuAv8BhgHvAv8BUAHoAv8BAAE+AVMB/9kAAT0BUgH/AUQB5wH+
+        Af8BTQHqAfwB/wFMAekB+wH/AUwB6QH7Af8BTAHpAfsB/wFMAekB+wH/AU0B6gH8Af8BRAHnAf4B/wEA
+        AT0BUgH/2QABNgFJAf8BNAHOAeYB/wE4AdAB4gH/ATcBzwHiAf8BNwHPAeIB/wE3Ac8B4gH/ATcBzwHi
+        Af8BOAHQAeIB/wEzAc8B5gH/AQABNgFJAf/ZAAEuAUIB/wEhAbgB0QH/ASIBuAHOAf8BIgG3Ac0B/wEi
+        AbcBzQH/ASIBtwHNAf8BIgG3Ac0B/wEiAbgBzgH/ASEBuAHRAf8BAAEuAUIB/9kAASgBOgH/AREBogG6
+        Af8BDgGeAbYB/wEKAZ0BtAH/AQoBnQG0Af8BCgGdAbQB/wEKAZ0BtAH/AQ4BngG2Af8BEQGiAboB/wEA
+        ASgBOgH/2QABHwExAf8BKQGiAbYB/wExAaQBtgH/ATABogG1Af8BLgGiAbUB/wEuAaIBtQH/ATABogG1
+        Af8BMQGkAbYB/wEpAaIBtgH/AQABIQEzAf/ZAAEXASkB/wFFAagBuAH/AYIBsgG/Af8BgAGwAb4B/wGA
+        AbABvgH/AYABsAG+Af8BgAGwAb4B/wGCAbIBvwH/AUUBqAG4Af8BAAEYASoB/9kAARABIAH/AUUBogGw
+        Af8BkAG2AcEB/wGOAbQBvwH/AY4BtAG/Af8BjgG0Ab8B/wGOAbQBvwH/AZABtgHBAf8BRQGiAbAB/wEA
+        AQ8BHwH/2QABCwEaAf8BAAEMARsB/wEAAQwBGwH/AQABDAEbAf8BAAEMARsB/wEAAQwBGwH/AQABDAEb
+        Af8BAAEMARsB/wEAAQwBGwH/AQABDAEbAf//AP8A/wD/AP8A/wDeAAE7ARwBAAH/AUoBJAEAAf8BUAEp
+        AQAB/wFQASgBAAH/AVABKAEAAf8BUAEoAQAB/wFQASgBAAH/AVABKQEAAf8BSgEkAQAB/wE8ARwBAAH/
+        GQABOQEFAf8BAAFIAQwB/wEAAU0BDgH/AQABTQEOAf8BAAFNAQ4B/wEAAU0BDgH/AQABTQEOAf8BAAFN
+        AQ4B/wEAAUgBDAH/AQABOgEFAf8YAAEtAScBHgH/ATYBLwEmAf8BPAE1ASsB/wE8ATUBKwH/ATwBNQEr
+        Af8BPAE1ASsB/wE8ATUBKwH/ATwBNQErAf8BNgEvASYB/wEtAScBHgH/GgABSwH/AgABggH/AgABiQH/
+        AgABiAH/AgABiAH/AgABiAH/AgABiAH/AgABiQH/AgABggH/AgABTAH/GAABQwEgAQAC/wHCATkC/wHK
+        AUoB/wH+AckBSQH/Af4ByQFJAf8B/gHJAUkB/wH+AckBSQL/AcoBSgL/AcEBOQH/AUQBIAEAAf8ZAAFB
+        AQgB/wE8Af8BmgH/AUkB/wGrAf8BRwH/AaoB/wFHAf8BqgH/AUcB/wGqAf8BRwH/AaoB/wFJAf8BqwH/
+        ATwB/wGaAf8BAAFBAQoB/xgAATIBLAEjAf8B2wHPAbYB/wHhAdYBuwH/AeAB1QG6Af8B4AHVAboB/wHg
+        AdUBugH/AeAB1QG6Af8B4QHWAbsB/wHbAc4BtgH/ATIBKwEiAf8aAAFTAf8BUQGAAv8BhgGRAv8BhQGP
+        Av8BhQGPAv8BhQGPAv8BhQGPAv8BhgGRAv8BUAGAAv8CAAFTAf8YAAFCAR8BAAH/Ae8BsQE0Af8B7QG4
+        AUIB/wHsAbcBQQH/AewBtwFBAf8B7AG3AUEB/wHsAbcBQQH/Ae0BuAFCAf8B7wGxATQB/wFCAR4BAAH/
+        GQABPwEHAf8BNAHpAZEB/wE/AeYBnAH/AT4B5QGbAf8BPgHlAZsB/wE+AeUBmwH/AT4B5QGbAf8BPwHm
+        AZwB/wE0AekBkQH/AQABPwEHAf8YAAExASsBIgH/AckBvQGoAf8BzQHCAasB/wHMAcABqgH/AcwBwAGq
+        Af8BzAHAAaoB/wHMAcABqgH/Ac0BwgGrAf8ByQG9AagB/wExASsBIgH/GgABUgH/AUQBTQH+Af8BTQGC
+        AfwB/wFMAYEB+wH/AUwBgQH7Af8BTAGBAfsB/wFMAYEB+wH/AU0BggH8Af8BRAFNAf4B/wIAAVIB/xgA
+        ATkBGAEAAf8B1AGdASgB/wHRAaABMAH/AdEBnwEuAf8B0QGfAS4B/wHRAZ8BLgH/AdEBnwEuAf8B0QGg
+        ATAB/wHUAZ0BKAH/ATkBGAEAAf8ZAAE2AQEB/wEnAdEBVAH/AS0BzwGEAf8BLAHOAYMB/wEsAc4BgwH/
+        ASwBzgGDAf8BLAHOAYMB/wEtAc8BhAH/AScB0QFUAf8BAAE2AQEB/xgAASsBJQEcAf8BtQGsAZcB/wG1
+        Aa0BmQH/AbUBrAGYAf8BtQGsAZgB/wG1AawBmAH/AbUBrAGYAf8BtQGtAZkB/wG1AawBlwH/ASsBJAEc
+        Af8aAAFJAf8BNAE6AeYB/wE4AUIB4gH/ATcBQAHiAf8BNwFAAeIB/wE3AUAB4gH/ATcBQAHiAf8BOAFC
+        AeIB/wEzAToB5gH/AgABSQH/GAABMAERAQAB/wG7AYcBFwH/AboBhwEaAf8BuQGHARoB/wG5AYcBGgH/
+        AbkBhwEaAf8BuQGHARoB/wG6AYcBGgH/AbsBhwEXAf8BMAERAQAB/xkAAS4BAAH/ARcBtwFBAf8BGgG0
+        AUMB/wEaAbQBQwH/ARoBtAFDAf8BGgG0AUMB/wEaAbQBQwH/ARoBtAFDAf8BFwG3AUEB/wEAAS4BAAH/
+        GAABJQEeARcB/wGhAZcBhgH/AaABlgGFAf8BoAGWAYUB/wGgAZYBhQH/AaABlgGFAf8BoAGWAYUB/wGg
+        AZYBhQH/AaEBlwGGAf8BJQEeARcB/xoAAUIB/wEhASUB0QH/ASIBKAHOAf8BIgEoAc0B/wEiASgBzQH/
+        ASIBKAHNAf8BIgEoAc0B/wEiASgBzgH/ASEBJQHRAf8CAAFCAf8YAAEnAQsBAAH/AaIBSwELAf8BnwFI
+        AQkB/wGbAUUBBgH/AZsBRQEGAf8BmwFFAQYB/wGbAUUBBgH/AZ8BSAEJAf8BogFLAQsB/wEnAQsBAAH/
+        GQABJQEAAf8BDAGfATAB/wEKAZsBLgH/AQcBmQErAf8BBwGZASsB/wEHAZkBKwH/AQcBmQErAf8BCgGb
+        AS4B/wEMAZ8BMAH/AQABJQEAAf8YAAEeARgBEQH/AY0BhAFNAf8BigGBAUoB/wGHAVQBRwH/AYcBVAFH
+        Af8BhwFUAUcB/wGHAVQBRwH/AYoBgQFKAf8BjQGEAU0B/wEeARgBEQH/GgABOgH/AREBFQG6Af8BDgES
+        AbYB/wEKAQ8BtAH/AQoBDwG0Af8BCgEPAbQB/wEKAQ8BtAH/AQ4BEgG2Af8BEQEVAboB/wIAAToB/xgA
+        AR4BAwEAAf8BnwFTAScB/wGhAYQBMAH/AaABggEuAf8BnwGBAS0B/wGfAYEBLQH/AaABggEuAf8BoQGE
+        ATAB/wGfAVMBJwH/AR4BBQEAAf8ZAAEcAQAB/wEpAZ0BQAH/ATIBnwFIAf8BMAGeAUYB/wEuAZ0BRQH/
+        AS4BnQFFAf8BMAGeAUYB/wEyAZ8BSAH/ASkBnQFAAf8BAAEcAQAB/xgAARcBEgEMAf8BlAGOAYMB/wGX
+        AZEBiQH/AZYBkAGHAf8BlQGPAYYB/wGVAY8BhgH/AZYBkAGHAf8BlwGRAYkB/wGUAY4BgwH/ARcBEgEM
+        Af8aAAExAf8BKQEqAbYB/wExATMBtgH/ATABMQG1Af8BLgEvAbUB/wEuAS8BtQH/ATABMQG1Af8BMQEz
+        AbYB/wEpASoBtgH/AgABMwH/GAABFAIAAf8BpQGOAUgB/wGuAZoBhAH/Aa0BmgGCAf8BrQGaAYIB/wGt
+        AZoBggH/Aa0BmgGCAf8BrgGaAYQB/wGlAY4BSAH/ARQCAAH/GQABEgEAAf8BSAGkAYEB/wGFAa0BkAH/
+        AYMBrAGPAf8BgwGsAY8B/wGDAawBjwH/AYMBrAGPAf8BhQGtAZAB/wFJAaQBgQH/AQABEwEAAf8YAAEQ
+        AQoBBQH/AaABmwGVAf8BqgGmAaIB/wGqAaYBoQH/AaoBpgGhAf8BqgGmAaEB/wGqAaYBoQH/AaoBpgGi
+        Af8BoAGbAZUB/wEQAQoBBQH/GgABKQH/AkUBuAH/AoIBvwH/AoABvgH/AoABvgH/AoABvgH/AoABvgH/
+        AoIBvwH/AkUBuAH/AgABKgH/GAABCAIAAf8BnAGLAUsB/wGwAaUBlAH/Aa8BowGSAf8BrwGjAZIB/wGv
+        AaMBkgH/Aa8BowGSAf8BsAGlAZQB/wGcAYoBSwH/AQkCAAH/GQABBwEAAf8BTAGbAYAB/wGVAbEBnQH/
+        AZMBrwGbAf8BkwGvAZsB/wGTAa8BmwH/AZMBrwGbAf8BlQGxAZ0B/wFKAZsBgAH/AQABCAEAAf8YAAEG
+        AQIBAAH/AZsBlwGTAf8BsQGvAawB/wGvAa0BqgH/Aa8BrQGqAf8BrwGtAaoB/wGvAa0BqgH/AbEBrwGs
+        Af8BmwGXAZMB/wEHAQIBAAH/GgABIAH/AkUBsAH/ApABwQH/Ao4BvwH/Ao4BvwH/Ao4BvwH/Ao4BvwH/
+        ApABwQH/AkUBsAH/AgABHwH/GAABBAIAAf8BAwIAAf8BAwIAAf8BAwIAAf8BAwIAAf8BAwIAAf8BAwIA
+        Af8BAwIAAf8BAwIAAf8BBQIAAf8ZAAEEAQAB/wEAAQIBAAH/AQABAgEAAf8BAAECAQAB/wEAAQIBAAH/
+        AQABAgEAAf8BAAECAQAB/wEAAQIBAAH/AQABAgEAAf8BAAEFAQAB/xgAAQQCAAH/AQMCAAH/AQMCAAH/
+        AQMCAAH/AQMCAAH/AQMCAAH/AQMCAAH/AQMCAAH/AQMCAAH/AQUBAQEAAf8aAAEaAf8CAAEbAf8CAAEb
+        Af8CAAEbAf8CAAEbAf8CAAEbAf8CAAEbAf8CAAEbAf8CAAEbAf8CAAEbAf//AP8A/wAPAAFCAU0BPgcA
+        AT4DAAEoAwABQAMAASADAAEBAQABAQYAAQEWAAP/AQAC/wYAAv8GAAL/BgAB4AEHBgAB4AEHBgAB4AEH
+        BgAB4AEHBgAB4AEHBgAB4AEHBgAB4AEHBgAB4AEHBgAB4AEHBgAB4AEHBgAC/wYAAv8GAAL/BgAY/wHg
+        AQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHg
+        AQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHg
+        AQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcY/ws=
 </value>
   </data>
   <metadata name="MainStatusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
